kustomizations/iiif/loris/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loris
spec:
  replicas: ${replicas:=1}
  strategy:
    rollingUpdate:
      maxUnavailable: ${maxUnavailable:=25%}
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: cantaloupe
          image: elifesciences/loris:latest
          # resources:
          #   requests:
          #     cpu: 1000m
          #     memory: 1Gi
          #   limits:
          #     memory: 1.5Gi
          ports:
            - name: http
              containerPort: 5004
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
          volumeMounts:
          - name: config-volume
            mountPath: /srv/digests/uwsgi.ini
            subPath: uwsgi.ini
      volumes:
      - name: config-volume
        configMap:
          name: digests-config
          items:
          - key: uwsgi.ini
            path: uwsgi.ini
