kustomizations/iiif/loris/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loris
spec:
  type: ClusterIP
  ports:
    - port: 5004
      targetPort: http
      protocol: TCP
      name: http
